2004-04-30  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::open): Call path_conv::get_nt_native_path
	for evaluating NT path.
	* path.cc (normalize_posix_path): Remove trailing dots and spaces.
	(path_conv::get_nt_native_path): New function.
	* path.h (class path_conv): Declare get_nt_native_path method.

2004-04-30  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::open): Fix NT native path evaluation
	to allow opening serial ports.

2004-04-30  DJ Delorie  <dj@redhat.com>

	* init.cc (threadfunc_fe): Hack to make thread stacks always 16
	byte aligned.

2004-04-21  Yitzchak Scott-Thoennes  <sthoenna@efn.org>

	* syscalls.cc (lseek64): Fix debug_printf format string.
	(truncate64): Ditto.

2004-04-21  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::lseek): Force res to -1 on error.

2004-04-20  Christopher Faylor  <cgf@alum.bu.edu>

	* path.cc (is_unc_share): Rename from slash_unc_prefix_p throughout.

2004-04-20  Pierre Humblet <pierre.humblet@ieee.org>

	* path.cc (normalize_posix_path): Process all Posix paths and map three
	or more initial slashes to a single one.  Simplify processing following
	two initial slashes.
	(normalize_win32_path): Make last argument non-optional and do not
	check for NULL value.

2004-04-20  Pierre Humblet <pierre.humblet@ieee.org>

	* fhandler_disk_file.cc (fhandler_base::open_fs): Change
	set_file_attribute call to indicate that NT security isn't used.
	(fhandler_disk_file::fchmod): Rearrange to isolate 9x related
	statements.
	Do not set FILE_ATTRIBUTE_SYSTEM.
	(fhandler_disk_file::fchown): Check noop case first.
	* fhandler.cc (fhandler_base::open9x): Remove ntsec related statements.
	(fhandler_base::set_name): Do not set namehash.
	* fhandler.h (fhandler_base::get_namehash): Compute and set namehash if
	needed.
	* syscalls.cc (access): Verify that fh is not NULL. Do not set PC_FULL.
	(chmod): Ditto.
	(chown_worker): Ditto.